--- a/servicesdata.properties
+++ b/servicesdata.properties
@@ -1,12 +1,5 @@
 server.port1=5000
 spring.datasource.driver-class-name1=oracle.jdbc.OracleDriver
-spring.datasource.url1=jdbc:oracle:thin:@127.0.0.1:1521:xe
+spring.datasource.url1=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username1=cdevaws
 spring.datasource.password1=12345
-
-#No funciona
-#server.port1=5000
-#spring.datasource.driver-class-name1=oracle.jdbc.OracleDriver
-#spring.datasource.url1=jdbc:oracle:system:@//localhost:1521/xe
-#spring.datasource.username1=system
-#spring.datasource.password1=admin
